<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_back"
    tools:context=".MainActivity"
    android:weightSum="1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_weight="0.2">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Sign Up"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:textSize="35sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_weight="0.8"
        android:gravity="top">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/use"
            android:inputType="text"
            android:padding="10dp"
            android:id="@+id/reg_username"
            android:background="@color/white"
            android:layout_marginBottom="5dp"
            android:textAlignment="center"
            android:hint="first name"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/use"
            android:inputType="text"
            android:padding="10dp"
            android:background="@color/white"
            android:layout_marginBottom="5dp"
            android:textColor="@color/black"
            android:id="@+id/reg_lastName"
            android:textAlignment="center"
            android:hint="last name"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/p"
            android:drawableLeft="@drawable/pass"
            android:background="@color/white"
            android:id="@+id/reg_password"
            android:textColor="@color/black"
            android:padding="10dp"
            android:layout_marginBottom="5dp"
            android:textAlignment="center"
            android:inputType="textPassword"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/pass"
            android:background="@color/white"
            android:textColor="@color/black"
            android:padding="10dp"
            android:hint="@string/cp"
            android:id="@+id/reg_confirm"
            android:layout_marginBottom="5dp"
            android:textAlignment="center"
            android:inputType="textPassword"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/white"
            android:id="@+id/reg_email"
            android:layout_marginBottom="5dp"
            android:drawableLeft="@drawable/mail"
            android:textColor="@color/black"
            android:hint="@string/e"
            android:textAlignment="center"
            android:inputType="textEmailAddress"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:drawableLeft="@drawable/phone"
            android:padding="10dp"

            android:textColor="@color/black"
            android:background="@color/white"
            android:layout_marginBottom="5dp"
            android:id="@+id/reg_number"
            android:textAlignment="center"
            android:hint="@string/ph"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="10dp"
            android:background="@color/white"
            android:layout_marginBottom="5dp"
            android:id="@+id/reg_address"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:drawableLeft="@drawable/home"
            android:hint="@string/a"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/register"
            android:layout_marginBottom="5dp"
            android:textAlignment="center"
            android:background="@drawable/gradient_orange"
            android:textColor="@color/white"
            android:text="@string/r"/>
    </LinearLayout>


</LinearLayout>
